# air-executor

./: .gitignore  .pre-commit-config.yaml  .pylintrc  COVERAGE_QUICK_START.md  ENHANCED_SYSTEM_SUMMARY.md  LICENSE  Makefile  QUICKSTART.md  README.md  REAL_PROJECTS_QUICKSTART.md  ecosystem-multi-language.config.js  ecosystem.config.js  ecosystem.projects.config.js  ecosystem.real-projects.config.js  pyproject.toml  requirements-dev.txt  requirements.txt  run_orchestrator.py
.claude/: CLAUDE.md  PROJECT_MEMORY.md
.spec-workflow/: OPTIMIZATION_ROADMAP.md
airflow_dags/: README.md  README_AIRFLOW_INTEGRATION.md  air_executor_integration.py  autonomous_fixing_dag.py  claude_query_dag.py  claude_query_sdk.py  commit_and_push_dag.py  hybrid_control_example.py  python_cleanup_dag.py  simple_autonomous_iteration_dag.py  sync_to_airflow.sh
claudedocs/: AIRFLOW_E2E_TEST_GUIDE.md  AIRFLOW_INTEGRATION.md  AIRFLOW_QUICKSTART.md  AIRFLOW_VISIBILITY_SOLUTIONS.md  CLAUDE_SDK_SETUP.md  CLAUDE_SDK_TROUBLESHOOTING.md  CONFIG_FORMAT_ANALYSIS.md  CONFIG_USAGE_GUIDE.md  DAG_DISCOVERY_GUIDE.md  DAG_DISCOVERY_SUMMARY.md  DAG_PARAMETERS_GUIDE.md  DYNAMIC_TASK_QUEUING.md  HOW_TO_SEE_JOBS_IN_AIRFLOW.md  HYBRID_CONTROL_FLOW.md  IMPLEMENTATION_COMPLETE.md  ISSUE_RESOLVED_FILE_NOT_FOUND.md  PYTHON_USAGE_GUIDE.md  QUICK_ANSWERS.md  README.md  SOLID_REFACTORING_COMPLETE.md  SOLID_TEST_PARSING_IMPLEMENTATION.md  SRP_COMPLIANCE_AUDIT.md  WHAT_IF_NOT_RUNNING.md  WHY_AIR_EXECUTOR.md  adaptive-precommit-strategy.md  autonomous-fixing-reorganization-analysis.md  autonomous-fixing-verification-system.md  circuit-breaker-ssot.md  claude-wrapper-commit-detection-fix.md  commit-verification-implementation.md  complexity-calculation-bug-fix.md  config-refinement-phase.md  debug-and-time-gates-implementation.md  e2e-test-coverage-analysis-2025-10-05.md  e2e-test-improvements-complete-2025-10-05.md  fix-completion-check-summary.md  improve-test-coverage-tasks.md  interface-driven-architecture.md  interface-mismatch-fixes-and-tests.md  lint-fix-plan.md  (+30 more)
config/: air-executor.example.toml  autonomous_fix.yaml  error_patterns.yaml  hook-levels.yaml  money-making-app.yaml  multi_language_fix.yaml  pm2.config.js  prompts-precommit.yaml  prompts.yaml  real_projects_fix.yaml  sample_config.yaml  warps.yaml
docs/: AUTONOMOUS_FIXING.md  DOCUMENTATION_REORGANIZATION.md  GETTING_STARTED.md  MULTI_LANGUAGE_ARCHITECTURE.md  MULTI_LANGUAGE_SUMMARY.md  MULTI_LANGUAGE_USAGE.md  OVERVIEW.md  PRE_COMMIT_HOOKS.md  PROGRESSIVE_HOOKS_SUMMARY.md  README.md  REAL_PROJECTS_GUIDE.md  SETUP_OPTIMIZATION.md  STRUCTURED_TEST_OUTPUT.md  WRAPPER_MONITOR.md  idea.md  plan_keep_session.md  plan_separate_session.md
examples/: dynamic_tasks.json  simple_claude_dag.py  simple_job.json
scripts/: AUTONOMOUS_FIXING_GUIDE.md  INTERACTIVE-MONITOR.md  MONITORING-CHANGES.md  QUICK_START.md  README-MONITORING.md  README.md  README_AUTONOMOUS_FIXING.md  README_DAG_SYNC.md  SETUP_TOOLS.md  airflow_preflight_check.sh  airflow_simple_example.py  analyze_experiments.py  autonomous_fix.sh  autonomous_fix_with_redis.sh  check_tools.sh  claude_wrapper.py  claude_wrapper_history.sh  coverage-check.sh  create_job.sh  demo_wrapper_output.py  discover_and_queue.py  example_python_usage.py  example_with_pexpect.py  find_silent_failures.py  install_dependencies.sh  install_flutter.sh  install_redis.sh  (+35 more)
(+289 files in other folders)
