[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "air-executor"
version = "0.1.0"
description = "Autonomous job management system with ephemeral task runners"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "airflow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pendulum.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "tests/tmp_*",           # Temporary test runs
    "tests/sample_*",        # Test fixture projects (intentionally broken code)
    "tests/fixtures",        # Test fixtures
    "scripts",               # Utility scripts
    "**/node_modules",       # JS dependencies
    "**/.venv",             # Virtual environments
    "**/__pycache__",       # Python cache
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "C90", # mccabe complexity
]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=air_executor --cov-report=term-missing"
norecursedirs = [
    "sample_*",          # Test fixture projects (intentionally broken code)
    "fixtures",          # Test fixtures
    "tmp_*",             # Temporary test runs
    ".git",              # Git directories
    "node_modules",      # JS dependencies
]
